--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.0.jar=C:\\Users\\Albert\\Desktop\\Aplicacion Cliente\\gson-2.8.0.jar
-file.reference.oracle_ojdbc7.jar=C:\\Users\\Albert\\Desktop\\Aplicacion Cliente\\oracle_ojdbc7.jar
+file.reference.gson-2.8.0.jar=E:\\M08_Multimedia\\UF2\\gson-2.8.0.jar
+file.reference.oracle_ojdbc7.jar=E:\\M03 - Programacio basica\\BdOracle\\oracle_ojdbc7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
